--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
     "start": "next start",
     "update:snapshots": "jest --updateSnapshot",
     "test": "jest",
+    "test-vitest": "vitest",
     "test:unit": "jest",
     "test:e2e": "npx playwright test",
     "test:all": "npm run test:unit && npm run test:e2e",
@@ -57,25 +58,29 @@
   "devDependencies": {
     "@next/env": "^15.2.1",
     "@playwright/test": "^1.50.1",
-    "@testing-library/dom": "^10.4.0",
+    "@testing-library/dom": "^10.4.1",
     "@testing-library/jest-dom": "^6.6.3",
-    "@testing-library/react": "^16.1.0",
+    "@testing-library/react": "^16.3.0",
     "@types/jest": "^29.5.14",
-    "@types/node": "20.2.5",
+    "@types/node": "24.10.1",
     "@types/react": "^18.3.18",
     "@types/react-dom": "^18.3.5",
+    "@vitejs/plugin-react": "^5.1.1",
     "autoprefixer": "^10.4.22",
     "eslint": "^9.39.0",
     "eslint-config-next": "^15.5.6",
     "jest": "^29.7.0",
     "jest-environment-jsdom": "^29.7.0",
+    "jsdom": "^27.2.0",
     "msw": "^2.11.6",
     "next-router-mock": "^0.9.13",
     "postcss": "^8.5.6",
     "prettier": "^3.6.2",
     "prettier-plugin-tailwindcss": "^0.6.14",
     "ts-node": "^10.9.2",
-    "typescript": "^5.7.3"
+    "typescript": "^5.7.3",
+    "vite-tsconfig-paths": "^5.1.4",
+    "vitest": "^4.0.14"
   },
   "msw": {
     "workerDirectory": [
