--- a/package.json
+++ b/package.json
@@ -26,7 +26,7 @@
     "@radix-ui/react-popover": "^1.1.4",
     "@radix-ui/react-select": "^2.1.4",
     "@radix-ui/react-separator": "^1.1.8",
-    "@radix-ui/react-slot": "^1.1.1",
+    "@radix-ui/react-slot": "^1.2.4",
     "@radix-ui/react-switch": "^1.2.5",
     "@reduxjs/toolkit": "^2.9.2",
     "@tailwindcss/postcss": "^4.1.14",
@@ -36,6 +36,7 @@
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "cmdk": "^1.0.0",
+    "embla-carousel-react": "^8.6.0",
     "jest-fixed-jsdom": "^0.0.10",
     "lucide-react": "^0.554.0",
     "motion": "^12.23.25",
