--- a/package.json
+++ b/package.json
@@ -16,6 +16,8 @@
   "dependencies": {
     "@google/genai": "^1.4.0",
     "@hookform/resolvers": "^5.2.2",
+    "@payloadcms/next": "^3.69.0",
+    "@payloadcms/richtext-lexical": "^3.69.0",
     "@radix-ui/react-alert-dialog": "^1.1.4",
     "@radix-ui/react-avatar": "^1.1.3",
     "@radix-ui/react-checkbox": "^1.1.3",
@@ -37,16 +39,19 @@
     "clsx": "^2.1.1",
     "cmdk": "^1.0.0",
     "embla-carousel-react": "^8.6.0",
+    "graphql": "^16.12.0",
     "jest-fixed-jsdom": "^0.0.11",
     "lucide-react": "^0.554.0",
     "motion": "^12.23.26",
     "next": "^16.1.1",
     "next-intl": "^4.5.5",
     "next-themes": "^0.4.6",
+    "payload": "^3.69.0",
     "react": "19.2.3",
     "react-dom": "19.2.3",
     "react-hook-form": "^7.69.0",
     "react-redux": "^9.1.0",
+    "sharp": "^0.34.5",
     "sonner": "^1.7.1",
     "swagger-typescript-api": "^13.0.23",
     "tailwind-merge": "^3.4.0",
