--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
   "dependencies": {
     "@google/genai": "^1.4.0",
     "@hookform/resolvers": "^5.2.2",
+    "@payloadcms/db-mongodb": "^3.69.0",
     "@payloadcms/next": "^3.69.0",
     "@payloadcms/richtext-lexical": "^3.69.0",
     "@radix-ui/react-alert-dialog": "^1.1.4",
